Feature/fcrepo7 (#2219)
* Update dependencies and explicitly attach mockito as a javaagent

* javax to jakarta, jena updates

* More javax to jakarta, and other dependencies

* More cleanup

* More dependency adjustment

* Clean up unneeded plugin configuration

* Fix fcrepo-webapp jetty integration

* Add flyway postgres dependency, handle mariadb wrapping exceptions and try to batch update the search index

* MySQL needs to warm-up

* Disable failing Windows test for now

* Revert some changes, remove some unneeded dependencies

* remove jakarta exclusions